index.html editted

--- a/web_dev/personal_profile/index.html
+++ b/web_dev/personal_profile/index.html
@@ -61,7 +61,8 @@
 
         <div class="grid_20 push_2">
             <h1 class="project-header">My Project</h1>
-            <p class="project-header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat repellat, excepturi non suscipit dicta
+            <p class="project-header-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat
+                repellat, excepturi non suscipit dicta
                 veniam reprehenderit harum earum officiis eos ipsam similique, magnam, doloremque facilis delectus
                 corporis ipsum quaerat quae.
                 Eaque inventore provident maxime, est quos pariatur hic earum nam quidem voluptatibus tenetur officiis?
@@ -83,7 +84,20 @@
             <img src="img/projects.jpeg" alt="" class="project-img">
             <p>Project 3</p>
         </div>
-        <div id="contact"></div>
+        <div id="contact">
+            <div class="grid_5 push_2">
+                <img src="img/projects.jpeg" alt="" class="project-img">
+                <p>Project 1</p>
+            </div>
+            <div class="grid_5 push_2">
+                <img src="img/projects.jpeg" alt="" class="project-img">
+                <p>Project 2</p>
+            </div>
+            <div class="grid_5 push_2">
+                <img src="img/projects.jpeg" alt="" class="project-img">
+                <p>Project 3</p>
+            </div>
+        </div>
     </div>
 </body>
 
