Added the Contact me section

--- a/web_dev/personal_profile/index.html
+++ b/web_dev/personal_profile/index.html
@@ -42,6 +42,10 @@
         .project-header-paragraph {
             margin-bottom: 20px;
         }
+        .contact-me-header {
+            margin-top: 20px;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 
@@ -80,24 +84,24 @@
             <img src="img/projects.jpeg" alt="" class="project-img">
             <p>Project 2</p>
         </div>
-        <div class="grid_5 push_2">
+        <div class="grid_10 push_2">
             <img src="img/projects.jpeg" alt="" class="project-img">
             <p>Project 3</p>
         </div>
-        <div id="contact">
-            <div class="grid_5 push_2">
+
+        <h1 class="grid_24 push_2 contact-me-header">Contact Me</h1>
+
+        <div class="grid_5 push_2">
+            <div id="contact">
                 <img src="img/projects.jpeg" alt="" class="project-img">
-                <p>Project 1</p>
-            </div>
-            <div class="grid_5 push_2">
-                <img src="img/projects.jpeg" alt="" class="project-img">
-                <p>Project 2</p>
-            </div>
-            <div class="grid_5 push_2">
-                <img src="img/projects.jpeg" alt="" class="project-img">
-                <p>Project 3</p>
+                <p>Whatsapp</p>
             </div>
         </div>
+        <div class="grid_5 push_2">
+            <img src="img/projects.jpeg" alt="" class="project-img">
+            <p>Email</p>
+        </div>
+    </div>
     </div>
 </body>
 
