--- a/web_dev/personal_profile/index.html
+++ b/web_dev/personal_profile/index.html
@@ -24,6 +24,7 @@
             width: 160px;
             height: 160px;
             margin-right: 20px;
+            margin-bottom: 12px;
         }
 
         .project-header {
