Adding Cooler Registration Project

--- a/web_dev/personal_profile/index.html
+++ b/web_dev/personal_profile/index.html
@@ -10,9 +10,12 @@
 
     <style>
         body {
-            background-color: #D9AFD9;
-            background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
+            background-color: #ffffff;
 
+        }
+
+        a {
+            text-decoration: none;
         }
 
         .grid_16,
@@ -43,9 +46,13 @@
         .project-header-paragraph {
             margin-bottom: 20px;
         }
+
         .contact-me-header {
             margin-top: 20px;
             margin-bottom: 10px;
+        }
+        .email {
+            width: 200px;
         }
     </style>
 </head>
@@ -54,14 +61,14 @@
     <div class="container_24">
         <div class="grid_12 push_2">
             <div id="profile-img">
-                <img src="img/proifle-img-1.jpg" alt="test image profile">
+                <img src="img/myprofile_2.jpg" alt="test image profile">
             </div>
         </div>
         <div class="grid_16 push_2">
             <h1>About Me</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi distinctio molestias perferendis magni
-                neque quod magnam saepe culpa maiores, laudantium suscipit ipsam maxime consectetur architecto
-                temporibus ea tempora aperiam totam?</p>
+            <p>I have been in customer service for 8 years but have always wanted to work as a web developer. I know
+                combining my experience in customer service with my burning desire to be an outstanding Web developer
+                will make my customers happy</p>
         </div>
 
         <div class="grid_20 push_2">
@@ -79,28 +86,28 @@
         </div>
         <div class="grid_5 push_2">
             <img src="img/projects.jpeg" alt="" class="project-img">
-            <p>Project 1</p>
+            <p><a href="">Project 1</a></p>
         </div>
         <div class="grid_5 push_2">
             <img src="img/projects.jpeg" alt="" class="project-img">
-            <p>Project 2</p>
+            <p><a href="">Project 2</a></p>
         </div>
         <div class="grid_10 push_2">
             <img src="img/projects.jpeg" alt="" class="project-img">
-            <p>Project 3</p>
+            <p><a href="">Project 3</a></p>
         </div>
 
         <h1 class="grid_24 push_2 contact-me-header">Contact Me</h1>
 
-        <div class="grid_5 push_2">
+        <div class="grid_7 push_2">
             <div id="contact">
                 <img src="img/projects.jpeg" alt="" class="project-img">
-                <p>Whatsapp</p>
+                <p>Whatsapp: +97150 893 3564</p>
             </div>
         </div>
-        <div class="grid_5 push_2">
+        <div class="grid_7 push_2 email">
             <img src="img/projects.jpeg" alt="" class="project-img">
-            <p>Email</p>
+            <p>Email: abdelmagidahmed23@gmail.com</p>
         </div>
     </div>
     </div>
