--- a/web_dev/personal_projects/water_deliveries_followup/index.html
+++ b/web_dev/personal_projects/water_deliveries_followup/index.html
@@ -45,7 +45,7 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td><span class="display-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button></span>
+                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
@@ -56,7 +56,7 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td><span class="display-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button></span>
+                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
@@ -67,7 +67,7 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td><span class="display-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button></span>
+                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
