--- a/web_dev/personal_projects/water_deliveries_followup/index.html
+++ b/web_dev/personal_projects/water_deliveries_followup/index.html
@@ -71,6 +71,17 @@
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
+                <tr>
+                    <td>item 1</td>
+                    <td>item 2</td>
+                    <td>item 3</td>
+                    <td>item 4</td>
+                    <td>item 5</td>
+                    <td>item 6</td>
+                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
+                    </td>
+                    <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
+                </tr>
             </tbody>
         </table>
     </div>
