--- a/web_dev/personal_projects/water_deliveries_followup/index.html
+++ b/web_dev/personal_projects/water_deliveries_followup/index.html
@@ -4,27 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Water Deliveries Follow up</title>
 </head>
-<style>
-    table {
-        table-layout: fixed;
-        text-align: center;
-    }
-
-    th,
-    td {
-        border: 1px solid black;
-        padding: 35px;
-    }
-</style>
 
 <body>
     <div id="logo">
     </div>
 
-    <div id="orders-listing">
-        <table>
+    <div id="orders-listing" class="table-responsive-md">
+        <table class="table table-hover  table">
             <thead>
                 <tr>
                     <th>OrderID</th>
@@ -34,7 +25,7 @@
                     <th>Order</th>
                     <th>Amount</th>
                     <th>Order Delivered</th>
-                    <th>Comment</th>
+                    <th>Remarks</th>
                 </tr>
             </thead>
             <tbody id="orders">
@@ -45,7 +36,9 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
+                    <td class="delivery-status"><button class="update-delivery-status btn btn-success btn-sm"
+                            value="yes" id="yes">Yes</button><button
+                            class="update-delivery-status btn btn-danger btn-sm" value="no" id="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
@@ -56,7 +49,9 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
+                    <td class="delivery-status"><button class="update-delivery-status btn btn-success btn-sm"
+                            value="yes" id="yes">Yes</button><button
+                            class="update-delivery-status btn btn-danger btn-sm" value="no" id="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
@@ -67,7 +62,9 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
+                    <td class="delivery-status"><button class="update-delivery-status btn btn-success btn-sm"
+                            value="yes" id="yes">Yes</button><button
+                            class="update-delivery-status btn btn-danger btn-sm" value="no" id="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
@@ -78,7 +75,9 @@
                     <td>item 4</td>
                     <td>item 5</td>
                     <td>item 6</td>
-                    <td class = "delivery-status"><button class="update-delivery-status" value="yes">Yes</button><button class="update-delivery-status" value="no">No</button>
+                    <td class="delivery-status"><button class="update-delivery-status btn btn-success btn-sm"
+                            value="yes" id="yes">Yes</button><button
+                            class="update-delivery-status btn btn-danger btn-sm" value="no" id="no">No</button>
                     </td>
                     <td><textarea name="" id="" rows="5" cols="15"></textarea></td>
                 </tr>
@@ -87,6 +86,9 @@
     </div>
     <div id="feedback"></div>
     <script src="js/orders-followup.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
