--- a/web_dev/js_30_projects/04 - Array Cardio Day 1/index-START.html
+++ b/web_dev/js_30_projects/04 - Array Cardio Day 1/index-START.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  <div id="show-results"></div>
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
@@ -38,28 +39,98 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
+    const results = inventors.filter(inventor => inventor.year >= 1500 && inventor.year <= 1599);
+
+    console.table(results);
+    const showMe = document.getElementById('show-results');
+    showMe.innerHTML = results[0].first + ' ' + results[0].last +
+    "<br>" + results[1].first + ' ' + results[1].last;
+
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
-
+    const firstAndLastName = inventors.map(inventor => inventor.first + ' ' + inventor.last);
+    console.table(firstAndLastName);
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
+    // const sorted = inventors.sort(function(a, b){
+    //   if(a.year > b.year){
+    //     return 1;
+    //   } else {
+    //     return -1;
+    //   }
+    // });
+    
+
+    // Shorter way to write the above code
+    const sorted = inventors.sort((a,b) => a.year > b.year ? 1:-1);
+    console.table(sorted);
 
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
+    const totalYearLived = inventors.reduce((total,inventor) =>{
+      return total + (inventor.passed - inventor.year);
+    }, 0);
+
+    console.log(totalYearLived);
 
     // 5. Sort the inventors by years lived
+    const YearsLived = inventors.sort((a,b) => {
+      const firstGuy = a.passed - a.year;
+      const nextGuy = b.passed - b.year;
+      return firstGuy > nextGuy ? -1:1;
+    });
+
+    console.table(YearsLived);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+
+    // const de = links
+    //             .map(link => link.textContent)
+    //             .filter(streetName => streetName.includes('de'));
+
+
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
+    const alpha = people.sort(function(lastName, nextLastName){
+      const [alastName,anextName] = lastName.split(', ');
+      const [blastName,bnextName] = nextLastName.split(', ');
+      return alastName > blastName ? 1 : -1;
+    })
+
+    console.log(alpha);
 
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+
+    const transport = data.reduce((obj,item) => {
+      if(!obj[item]){
+        obj[item] = 0;
+      }
+
+      obj[item]++;
+      return obj;
+    }, {});
+
+    console.log(transport);
+
+    const testData = [1,3,4,1,4];
+
+    const testResult = testData.reduce((o,item) => {
+      if(!o[item]){
+        o[item] = 0;
+      }
+      o[item]++;
+      return o;
+    },{});
+
+    console.log(testResult);
 
   </script>
 </body>
