--- a/web_dev/personal_projects/water_deliveries_followup/index.html
+++ b/web_dev/personal_projects/water_deliveries_followup/index.html
@@ -1,137 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="css/style.css" />
     <title>Water Deliveries Follow up</title>
-</head>
+  </head>
 
-<body>
-    <div id="logo">
-    </div>
+  <body>
+    <div id="logo"></div>
     <div class="container">
-        <div id="show-date"></div>
-        <div id="orders-listing" class="row">
-            <div class="col">
-                <table class="table-responsive table table-hover
-                              table-bordered table table-sm">
-                    <thead>
-                        <tr>
-                            <th>OrderID</th>
-                            <th>Customer Name</th>
-                            <th>Phone number</th>
-                            <th>Location</th>
-                            <th>Order</th>
-                            <th>Amount</th>
-                            <th>Order Delivered</th>
-                            <th>Remarks</th>
-                        </tr>
-                    </thead>
-                    <tbody id="orders">
-                        <tr>
-                            <td class="text-sm-center p-3 m-5 text-wrap">#1234</td>
-                            <td class="text-sm-center p-3 m-5 text-wrap">Lorem ipsum dolor.</td>
-                            <td class="text-sm-center p-3 m-5 text-wrap">0501113334</td>
-                            <td class="text-sm-center p-3 m-5 text-wrap">Dubai Marin, behind the civil defence,Solafa Tower</td>
-                            <td class="text-sm-center p-3 m-4 text-wrap items-bought">500*34+200B*34+330*34+500*34+200B*34</td>
-                            <td class="text-sm p-4">1500 AED</td>
-                            <td class="delivery-status"><button
-                                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm" value="yes"
-                                    id="yes">Yes</button><button
-                                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm" value="no"
-                                    id="no">No</button>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td class="text-sm">item 1</td>
-                            <td class="text-sm">item 2</td>
-                            <td class="text-sm">item 3</td>
-                            <td class="text-sm">item 4</td>
-                            <td class="text-sm">item 5</td>
-                            <td class="text-sm">item 6</td>
-                            <td class="delivery-status"><button
-                                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm" value="yes"
-                                    id="yes">Yes</button><button
-                                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm" value="no"
-                                    id="no">No</button>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>item 1</td>
-                            <td>item 2</td>
-                            <td>item 3</td>
-                            <td>item 4</td>
-                            <td>item 5</td>
-                            <td>item 6</td>
-                            <td class="delivery-status"><button
-                                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm" value="yes"
-                                    id="yes">Yes</button><button
-                                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm" value="no"
-                                    id="no">No</button>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>item 1</td>
-                            <td>item 2</td>
-                            <td>item 3</td>
-                            <td>item 4</td>
-                            <td>item 5</td>
-                            <td>item 6</td>
-                            <td class="delivery-status"><button
-                                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm" value="yes"
-                                    id="yes">Yes</button><button
-                                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm" value="no"
-                                    id="no">No</button>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>item 1</td>
-                            <td>item 2</td>
-                            <td>item 3</td>
-                            <td>item 4</td>
-                            <td>item 5</td>
-                            <td>item 6</td>
-                            <td class="delivery-status"><button
-                                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm" value="yes"
-                                    id="yes">Yes</button><button
-                                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm" value="no"
-                                    id="no">No</button>
-                            </td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td>item 1</td>
-                            <td>item 2</td>
-                            <td>item 3</td>
-                            <td>item 4</td>
-                            <td>item 5</td>
-                            <td>item 6</td>
-                            <td class="delivery-status"><button
-                                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm" value="yes"
-                                    id="yes">Yes</button><button
-                                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm" value="no"
-                                    id="no">No</button>
-                            </td>
-                            <td></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+      <div id="show-date"></div>
+      <div id="orders-listing" class="row">
+        <div class="col">
+          <table
+            class="table-responsive table table-hover table-bordered table table-sm"
+          >
+            <thead>
+              <tr>
+                <th>OrderID</th>
+                <th>Customer Name</th>
+                <th>Phone number</th>
+                <th>Location</th>
+                <th>Order</th>
+                <th>Amount</th>
+                <th>Order Delivered</th>
+                <th>Remarks</th>
+              </tr>
+            </thead>
+            <tbody id="orders">
+              <tr>
+                <td class="text-sm-center p-3 m-5 text-wrap">#1234</td>
+                <td class="text-sm-center p-3 m-5 text-wrap">
+                  Lorem ipsum dolor.
+                </td>
+                <td class="text-sm-center p-3 m-5 text-wrap">0501113334</td>
+                <td class="text-sm-center p-3 m-5 text-wrap">
+                  Dubai Marin, behind the civil defence,Solafa Tower
+                </td>
+                <td class="text-sm-center p-3 m-4 text-wrap items-bought">
+                  500*34+200B*34+330*34+500*34+200B*34
+                </td>
+                <td class="text-sm p-4">1500 AED</td>
+                <td class="delivery-status">
+                  <button
+                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm"
+                    value="yes"
+                    id="yes"
+                  >
+                    Yes</button
+                  ><button
+                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm"
+                    value="no"
+                    id="no"
+                  >
+                    No
+                  </button>
+                </td>
+                <td class="remarks-option"><button value ="remarks" class="update-delivery-status btn btn-light btn-sm p-1 text-sm remarks">Remarks</button></td>
+              </tr>
+              <tr>
+                <td class="text-sm">item 1</td>
+                <td class="text-sm">item 2</td>
+                <td class="text-sm">item 3</td>
+                <td class="text-sm">item 4</td>
+                <td class="text-sm">item 5</td>
+                <td class="text-sm">item 6</td>
+                <td class="delivery-status">
+                  <button
+                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm"
+                    value="yes"
+                    id="yes"
+                  >
+                    Yes</button
+                  ><button
+                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm"
+                    value="no"
+                    id="no"
+                  >
+                    No
+                  </button>
+                </td>
+                <td>
+                  <button
+                    value="remarks"
+                    class="update-delivery-status btn btn-light btn-sm p-1 text-sm remarks"
+                  >Remarks</button>
+                </td>
+              </tr>
+              <tr>
+                <td>item 1</td>
+                <td>item 2</td>
+                <td>item 3</td>
+                <td>item 4</td>
+                <td>item 5</td>
+                <td>item 6</td>
+                <td class="delivery-status">
+                  <button
+                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm"
+                    value="yes"
+                    id="yes"
+                  >
+                    Yes</button
+                  ><button
+                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm"
+                    value="no"
+                    id="no"
+                  >
+                    No
+                  </button>
+                </td>
+                <td><button value ="remarks" class="update-delivery-status btn btn-light btn-sm p-1 text-sm remarks">Remarks</button></td>
+              </tr>
+              <tr>
+                <td>item 1</td>
+                <td>item 2</td>
+                <td>item 3</td>
+                <td>item 4</td>
+                <td>item 5</td>
+                <td>item 6</td>
+                <td class="delivery-status">
+                  <button
+                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm"
+                    value="yes"
+                    id="yes"
+                  >
+                    Yes</button
+                  ><button
+                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm"
+                    value="no"
+                    id="no"
+                  >
+                    No
+                  </button>
+                </td>
+                <td><button value ="remarks" class="update-delivery-status btn btn-light btn-sm p-1 text-sm remarks">Remarks</button></td>
+              </tr>
+              <tr>
+                <td>item 1</td>
+                <td>item 2</td>
+                <td>item 3</td>
+                <td>item 4</td>
+                <td>item 5</td>
+                <td>item 6</td>
+                <td class="delivery-status">
+                  <button
+                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm"
+                    value="yes"
+                    id="yes"
+                  >
+                    Yes</button
+                  ><button
+                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm"
+                    value="no"
+                    id="no"
+                  >
+                    No
+                  </button>
+                </td>
+                <td><button value ="remarks" class="update-delivery-status btn btn-light btn-sm p-1 text-sm remarks">Remarks</button></td>
+              </tr>
+              <tr>
+                <td>item 1</td>
+                <td>item 2</td>
+                <td>item 3</td>
+                <td>item 4</td>
+                <td>item 5</td>
+                <td>item 6</td>
+                <td class="delivery-status">
+                  <button
+                    class="update-delivery-status btn btn-success btn-sm p-1 text-sm"
+                    value="yes"
+                    id="yes"
+                  >
+                    Yes</button
+                  ><button
+                    class="update-delivery-status btn btn-danger btn-sm p-1 text-sm"
+                    value="no"
+                    id="no"
+                  >
+                    No
+                  </button>
+                </td>
+                <td><button value ="remarks" class="update-delivery-status btn btn-light btn-sm p-1 text-sm remarks">Remarks</button></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
+      </div>
     </div>
     <div id="feedback"></div>
-    <script src="js/testing_script.js"></script>
-</body>
-
+    <script src="js/jquery-3.7.1.min (1).js"></script>
+    <script src="js/orders-followup-jquery.js"></script>
+    <!-- <script src="js/testing_script.js"></script> -->
+  </body>
 </html>
