--- a/web_dev/jon_duckett/JAVASCRIPT&JQUERY/javascript_jquery/ch08/data/data.html
+++ b/web_dev/jon_duckett/JAVASCRIPT&JQUERY/javascript_jquery/ch08/data/data.html
@@ -13,3 +13,6 @@
   <p><b>New York, NY</b><br>
   May 30</p>
 </div>
+<div class="event">
+  <p>The buses will move @ 6:00 pm. Please make sure to be there at least 15 min before departure</p>
+</div>
