Update Flexbox and add flex-shrink

--- a/flexbox_sandbox/index.html
+++ b/flexbox_sandbox/index.html
@@ -60,20 +60,18 @@
       });
     </script> -->
 
-    <div class="article-container">
+    <!-- <div class="article-container">
       <div class="article-group">
         <div class="article">article 1</div>
         <div class="article">article 2</div>
         <div class="article">article 3</div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="image-container">
-      <div class="img-item"><img src="img/awesome-logo.svg" alt=""></div>
-      <div class="img-item"><img src="img/five.svg" alt=""></div>
-      <div class="img-item"><img src="img/social-icons.svg" alt=""></div>
-    </div>
-
-
+ <form>
+  <input type="text" placeholder="Name">
+  <input type="email" placeholder="Email Address">
+  <input type="submit" value="Subscribe">
+</form>
   </body>
 </html>
